# GTOPoker

./: .gitignore  CMakeLists.txt  README.md  setup.py  strategy.dat.current  strategy.dat.sum
data/strategies/: btn_rfi_range.txt  sb_rfi_range.txt  strategy.dat.current  strategy.dat.sum
examples/: basic_cfr_example.cpp  strategy_viewer.cpp
include/abstraction/: BetAbstraction.hpp  HandAbstraction.hpp
include/cfr/: CFRSolver.hpp  RegretTable.hpp  StrategyTable.hpp
include/game/: Action.hpp  GameState.hpp  HandEvaluator.hpp  PokerDefs.hpp
include/utils/: Converter.hpp  Logger.hpp  Random.hpp  Serialization.hpp
poker_gto/strategy/: preflop_gto.py
scripts/: build.sh  build_and_run.sh
src/: preflop_gto.py
src/abstraction/: BetAbstraction.cpp  HandAbstraction.cpp
src/cfr/: CFRSolver.cpp  RegretTable.cpp  StrategyTable.cpp
src/game/: Action.cpp  GameState.cpp  HandEvaluator.cpp  PokerDefs.cpp
src/utils/: Converter.cpp  Logger.cpp  Random.cpp  Serialization.cpp
tests/: test_game.cpp
